test/ill-formed/semantic/match_list_pat_on_tuple.py
# List pattern matching a tuple value. Python: matches; PurePy: ill-formed by spec
# (see §Unsupported Python features).
v = (1, 2)
match v:
    case [a, b]:
        print(a, b)
    case _:
        print("other")
